Feature = Add todo complete

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
 
     <h1><span id="js-display-name">Name</span>'s Dailies</h1>
 
-    <section>
-      <div>
-        <span>trash</span>
-        <input type="text">
-        <span>check</span>
-      </div>
+    <section id="js-list" class="list">
     </section>
+
+    <input id="js-input-todo" type="text" placeholder="add todos!">
+    <button id="js-button-new">-></button>
 
   </main>
 
