--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet"> 
+  <script src="https://kit.fontawesome.com/3177cce9fd.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
   <title>Dailies - todo web app</title>
 </head>
@@ -13,7 +14,7 @@
   <section id="js-prompt" class="prompt">
     <p>Welcome!</p>
     <input id="js-input-name" type="text" placeholder="enter your name" required>
-    <button id="js-button" type="submit">icon -></button>
+    <button id="js-button" type="submit"><i class="fas fa-arrow-circle-right"></i></button>
   </section>
   <!-- Prompt -->
 
@@ -25,7 +26,7 @@
     </section>
 
     <input id="js-input-todo" type="text" placeholder="add todos!">
-    <button id="js-button-new">-></button>
+    <button id="js-button-new"><i class="fas fa-arrow-circle-right"></i></button>
 
   </main>
 
