Drag and Drop Design Complete

--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
 
   <main id="js-todo" class="noDisplay">
 
-    <h1><span id="js-display-name">Name</span>'s Dailies</h1>
+    <h1><span id="js-display-name"></span>'s Dailies</h1>
 
-    <section id="js-list" class="list">
-    </section>
+    <div id="js-start">
+      <!-- <section id="js-list" class="list">
+      </section> -->
+    </div>
 
-    <input id="js-input-todo" type="text" placeholder="add todos!">
-    <button id="js-button-new"><i class="fas fa-arrow-circle-right"></i></button>
+    <div id="js-end">
+
+    </div>
+
+    <div>
+      <input id="js-input-todo" type="text" placeholder="add todos!">
+      <button id="js-button-new"><i class="fas fa-arrow-circle-right"></i></button>
+    </div>
 
   </main>
 
