--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <!-- Prompt -->
   <section id="js-prompt" class="prompt">
     <p>Welcome!</p>
-    <input id="js-input-name" type="text" placeholder="enter your name" required>
-    <button id="js-button" type="submit"><i class="fas fa-arrow-circle-right"></i></button>
+    <form>
+      <input id="js-input-name" type="text" placeholder="enter your name" required>
+      <button id="js-button" type="submit"><i class="fas fa-arrow-circle-right"></i></button>
+    </form>
   </section>
   <!-- Prompt -->
 
