Add Titles to Start and End

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <h1><span id="js-display-name"></span>'s Dailies</h1>
 
     <div id="js-start">
+      <p>In Progress</p>
     </div>
 
     <div id="js-end">
+      <p>Complete</p>
     </div>
 
     <div>
