Add Reset Button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <button id="js-button-new"><i class="fas fa-arrow-circle-right"></i></button>
     </div>
 
+    <button id="js-reset"><i>reset</i></button>
+
   </main>
 
   <script src="./logic.js"></script>
