Styling to Main Todo Section Start

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <h1><span id="js-display-name"></span>'s Dailies</h1>
 
     <div id="js-start">
-      <p>In Progress</p>
+      <p class="title">In Progress</p>
     </div>
 
     <div id="js-end">
-      <p>Complete</p>
+      <p class="title">Complete</p>
     </div>
 
-    <div>
+    <div class="group4">
       <input id="js-input-todo" type="text" placeholder="add todos!">
       <button id="js-button-new"><i class="fas fa-arrow-circle-right"></i></button>
     </div>
