Styling for End Section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1><span id="js-display-name"></span>'s Dailies</h1>
 
     <div id="js-start">
-      <p class="title">In Progress</p>
+      <p class="title">In-Progress</p>
     </div>
 
     <div id="js-end">
