Basic Styling Complete

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <button id="js-button-new"><i class="fas fa-arrow-circle-right"></i></button>
     </div>
 
-    <button id="js-reset"><i>reset</i></button>
+    <button id="js-reset">reset</button>
 
   </main>
 
