--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet"> 
   <script src="https://kit.fontawesome.com/3177cce9fd.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
-  <title>Dailies - todo web app</title>
+  <title>Dailies - todo app</title>
 </head>
 <body>
 
